@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.5050 2017/11/26 16:49:32 adam Exp $
+$NetBSD: CHANGES-2017,v 1.5051 2017/11/26 17:13:18 adam Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -7249,3 +7249,7 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated geography/gama to 1.20 [gdt 2017-11-26]
 	Updated www/nghttp2 to 1.28.0 [adam 2017-11-26]
 	Updated www/nginx-devel to 1.13.7 [adam 2017-11-26]
+	Added devel/py-exam version 0.10.6 [adam 2017-11-26]
+	Added devel/py-test-assume version 1.2 [adam 2017-11-26]
+	Added devel/py-test-sugar version 0.9.0 [adam 2017-11-26]
+	Added devel/py-test-pythonpath version 0.7.1 [adam 2017-11-26]
